--- a/Week01_Semantic_structure/index.html
+++ b/Week01_Semantic_structure/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Welcome 2 My Site!!</h1>
-      <p>brief intro (>=<)</p>
+      <p>brief intro</p>
     </header>
     <nav>
       <ul>
@@ -20,7 +20,7 @@
     <main>
       <section>
         <h2>Servicess</h2>
-        <p><Details></Details></p>
+        <p><details></details></p>
       </section>
     </main>
     <footer>
