--- a/Week01_Semantic_structure/index.html
+++ b/Week01_Semantic_structure/index.html
@@ -20,7 +20,7 @@
     <main>
       <section>
         <h2>Servicess</h2>
-        <p><details></details></p>
+        <p>details</p>
       </section>
     </main>
     <footer>
