--- a/week02_media_homework/index.html
+++ b/week02_media_homework/index.html
@@ -8,8 +8,12 @@
   <body>
     <img src="lazlos-logo.png" alt="" />
     <h1>My Favorite Dish</h1>
-    <h1>My Spicy crispy chicken sandwich</h1>
-    <h1>How they make it</h1>
+
+    <h3>My Spicy crispy chicken sandwich</h3>
+    <img src="DSC02765.jpg" alt="">
+    <h2>How they make it</h2>
+    <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/NAtzCEiOb6s?si=PUdFQ8pAG03Ynaoa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></video>
   </body>
+
   <footer>Copyright© 2026 Honest Abes</footer>
 </html>
