--- a/week02_media_homework/index.html
+++ b/week02_media_homework/index.html
@@ -6,11 +6,10 @@
     <title>lazlo's Brewery and Grill</title>
   </head>
   <body>
-    <img src="lazlos-logo.png" alt="" />
+    <img src="week02_media_homework/images/lazlos-logo.png" alt="" />
     <h1>My Favorite Dish</h1>
-
-    <h3>My Spicy crispy chicken sandwich :3</h3>
-    <img src="DSC02765.jpg" alt="">
+    <h3>My Spicy crispy chicken sandwich</h3>
+    <img src="week02_media_homework/images/DSC02765.jpg" alt="">
     <h2>How they make it</h2>
     <video  src="https://www.youtube.com/embed/NAtzCEiOb6s?si=PUdFQ8pAG03Ynaoa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></video>
   </body>
