--- a/week02_media_homework/index.html
+++ b/week02_media_homework/index.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lazlo's Brewery and Grill</title>
+    <title>
+      lazlo's Brewery and Grill</title>
   </head>
   <body>
+    <header>
     <img src="week02_media_homework/images/lazlos-logo.png" alt="" />
-    <h1>My Favorite Dish</h1>
-    <h3>My Spicy crispy chicken sandwich</h3>
+    <h1>Lazlos</h1>
+  </header>
+   <main>
+    <p>My Spicy crispy chicken sandwich</p>
     <img src="week02_media_homework/images/DSC02765.jpg" alt="">
     <h2>How they make it</h2>
     <video  src="https://www.youtube.com/embed/NAtzCEiOb6s?si=PUdFQ8pAG03Ynaoa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></video>
+  </main>
+  <footer>Copyright© 2026 Honest Abes</footer>
   </body>
 
-  <footer>Copyright© 2026 Honest Abes</footer>
+  
 </html>
