sorry I misunderstood ignore prev commits!

--- a/week02_media_homework/index.html
+++ b/week02_media_homework/index.html
@@ -6,18 +6,27 @@
     <title>lazlo's Brewery and Grill</title>
   </head>
   <body>
+   
     <header>
-    <img src="week02_media_homework/images/lazlos-logo.png" alt="" />
-    <h1>Lazlos</h1>
-  </header>
-   <main>
-    <p>My Spicy crispy chicken sandwich</p>
-    <img src="week02_media_homework/images/DSC02765.jpg" alt="">
-    <h2>How they make it</h2>
-    <video  src="https://www.youtube.com/embed/NAtzCEiOb6s?si=PUdFQ8pAG03Ynaoa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></video>
-  </main>
-  <footer>Copyright© 2026 Honest Abes</footer>
+      <h1>Lazlos</h1>
+      <img src="images/lazlos-logo.png" alt="Lazlos" width="200" />
+     
+    </header>
+    <main>
+      <h2>My Spicy crispy chicken sandwich</h2>
+      <img src="images/DSC02765.jpg" alt="Lazlos" width="500" />
+      <h2>How they make it</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/NAtzCEiOb6s?si=MzmrlC5-nvmjltlc"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </main>
+    <footer>Copyright© 2026 Lazlo's Brewery and Grill</footer>
   </body>
-
-  
 </html>
