--- a/week02_media_homework/index.html
+++ b/week02_media_homework/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lazlo's Brewery and Grill</title>
+    <title>Lazlo's Brewery and Grill</title>
   </head>
   <body>
-   
     <header>
-      <h1>Lazlos</h1>
+      <h1>Lazlo's Brewery and Grill</h1>
       <img src="images/lazlos-logo.png" alt="Lazlos" width="200" />
-     
     </header>
     <main>
-      <h2>My Spicy crispy chicken sandwich</h2>
+  
+      <h2>Spicy crispy chicken sandwich</h2>
       <img src="images/DSC02765.jpg" alt="Lazlos" width="500" />
       <h2>How they make it</h2>
       <iframe
@@ -27,6 +26,6 @@
         allowfullscreen
       ></iframe>
     </main>
-    <footer>Copyright© 2026 Lazlo's Brewery and Grill</footer>
+    <footer>© Copyright 2026 - Lazlo's Brewery and Grill</footer>
   </body>
 </html>
